
Version (CVS) 
-------------

All:   Fixed bug 1757 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added core/** package and children to castor-xml.jar.
       Details: http://bugzilla.exolab.org/show_bug.cgi?id=1757
       (Werner - 20041006)

JDO:   Fixed bug 1755 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Brought jdo-conf.dtd in-line with XML Schema instance, making <transaction-demarcation>
       required.
       Details: http://bugzilla.exolab.org/show_bug.cgi?id=1755
       (Werner - 20041006)
       
XML:   Fixed bug 1685, A StackOverflowError was occuring at certain times
       during container processing if the input XML was invalid.
       Details: http://bugzilla.exolab.org/show_bug.cgi?id=1685
       (kvisco - 20041005)

JDO:   Fixed bug 1594 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added new JDO2.java, adding factory method for instantiation, removing public 
       constructor, changing way of loading configuration.
       At the same time, JDO.java has been deprecated.
       (Werner - 20041005)

XML:   Fixed bug 1592: DecimalValidator was not taking into account a leading
       sign ('+' or '-').
       (kvisco - 20041004)
       
JDO:   Fixed bug 1435 using contribution from Matt Caswell [bugzilla.exolab.org@baggins.org]
       Fixed problem with finding add<FieldName>() method. 
       Details: http://bugzilla.exolab.org/show_bug.cgi?id=1435
       (Werner - 20041004)
       
JDO:   Fixed bug 1616 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Framed <driver>, <data-source> and <jndi> elements in jdo-conf.xsd with an <xsd:choice> to 
       indicate that at any time only one should be present.
       Details: http://bugzilla.exolab.org/show_bug.cgi?id=1616
       (Werner - 20041002)

JDO:   Fixed bug 1221 using contribution from Martin Fuchs [martin-fuchs@gmx.net]